--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,42 +1,52 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+
 /node_modules
 /.pnp
 .pnp.js
-/.svelte-kit
 
 # testing
+
 /coverage
 
-# next.js
-/.next/
-/out/
-/_static/
+# vite
+
+dist
+dist-ssr
 
 # production
+
 /build
-/dist
 
 # misc
+
 .DS_Store
-*.pem
+\*.pem
+*.local
 
 # debug
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
+
+.env\*.local
 .env
 
 # vercel
+
 .vercel
 
 # typescript
-*.tsbuildinfo
-next-env.d.ts
-tsconfig.tsbuildinfo
 
+\*.tsbuildinfo
+next-env.d.ts
+
+# forge
+
+out
+cache
