--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "jotai": "^2.3.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.3",
     "react-dom": "^18.2.0",
     "util": "^0.12.4",
     "viem": "^1.4.2",
