--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -1,7 +1,7 @@
 spec:
     name: op-stack-deployer
     services:
-        - name: L2_Chain
+        - name: opstackdeployer
           git:
-              branch: feat/deploy-ui
+              branch: feat-deploy-ui
               repo_clone_url: https://github.com/Blocktheory/opstack-deployer
